--- a/environment.yml
+++ b/environment.yml
@@ -2,60 +2,61 @@ name: ds
 channels:
   - defaults
 dependencies:
-  - asn1crypto=0.24.0=py27_0
-  - astroid=1.6.5=py27_0
-  - backports=1.0=py27_1
-  - backports.functools_lru_cache=1.5=py27_1
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.10.15=py27_0
-  - cffi=1.11.5=py27h6174b99_1
-  - chardet=3.0.4=py27_1
-  - click=6.7=py27h2b86a94_0
-  - configparser=3.5.0=py27hc7edf1b_0
-  - cryptography=2.3.1=py27hdbc3d79_0
-  - enum34=1.1.6=py27_1
-  - flask=1.0.2=py27_1
-  - futures=3.2.0=py27_0
-  - idna=2.7=py27_0
-  - ipaddress=1.0.22=py27_0
-  - isort=4.3.4=py27_0
-  - itsdangerous=0.24=py27_1
-  - jinja2=2.10=py27_0
-  - krb5=1.16.1=h24a3359_6
-  - lazy-object-proxy=1.3.1=py27h1de35cc_2
-  - libcurl=7.61.1=hf30b1f0_0
-  - libcxx=4.0.1=h579ed51_0
-  - libcxxabi=4.0.1=hebd6815_0
-  - libedit=3.1.20170329=hb402a30_2
-  - libffi=3.2.1=h475c297_4
-  - libpq=10.5=hf30b1f0_0
-  - libssh2=1.8.0=h322a93b_4
-  - markupsafe=1.0=py27h1de35cc_1
-  - mccabe=0.6.1=py27_1
-  - mongodb=4.0.2=had4e77e_0
-  - ncurses=6.1=h0a44026_0
-  - openssl=1.0.2p=h1de35cc_0
-  - pip=10.0.1=py27_0
-  - psycopg2=2.7.5=py27hdbc3d79_0
-  - pycparser=2.18=py27_1
-  - pylint=1.9.2=py27_0
-  - pymongo=3.7.1=py27h0a44026_0
-  - pyopenssl=18.0.0=py27_0
-  - pysocks=1.6.8=py27_0
-  - python=2.7.15=h138c1fe_0
-  - readline=7.0=h1de35cc_5
-  - redis=5.0.0=h1de35cc_0
-  - requests=2.19.1=py27_0
-  - setuptools=40.2.0=py27_0
-  - singledispatch=3.4.0.3=py27he22c18d_0
-  - six=1.11.0=py27_1
-  - sqlite=3.25.2=ha441bb4_0
-  - tk=8.6.8=ha441bb4_0
-  - urllib3=1.23=py27_0
-  - werkzeug=0.14.1=py27_0
-  - wheel=0.31.1=py27_0
-  - wrapt=1.10.11=py27h1de35cc_2
-  - zlib=1.2.11=hf3cbc9b_2
+  - asn1crypto=0.24.0
+  - astroid=1.6.5
+  - backports=1.0
+  - backports.functools_lru_cache=1.5
+  - ca-certificates=2018.03.07
+  - certifi=2018.10.15
+  - cffi=1.11.5
+  - chardet=3.0.4
+  - click=6.7
+  - configparser=3.5.0
+  - cryptography=2.3.1
+  - enum34=1.1.6
+  - flask=1.0.2
+  - futures=3.2.0
+  - idna=2.7
+  - ipaddress=1.0.22
+  - isort=4.3.4
+  - itsdangerous=0.24
+  - jinja2=2.10
+  - krb5=1.16.1
+  - lazy-object-proxy=1.3.1
+  - libcurl=7.61.1
+  - libcxx=4.0.1
+  - libcxxabi=4.0.1
+  - libedit=3.1.20170329
+  - libffi=3.2.1
+  - libpq=10.5
+  - libssh2=1.8.0
+  - markupsafe=1.0
+  - mccabe=0.6.1
+  - mongodb=4.0.2
+  - ncurses=6.1
+  - openssl=1.0.2p
+  - pip=10.0.1
+  - psycopg2=2.7.5
+  - pycparser=2.18
+  - pylint=1.9.2
+  - pymongo=3.7.1
+  - pyopenssl=18.0.0
+  - pysocks=1.6.8
+  - python=2.7.15
+  - readline=7.0
+  - redis=5.0.0
+  - requests=2.19.1
+  - setuptools=40.2.0
+  - singledispatch=3.4.0.3
+  - six=1.11.0
+  - sqlite=3.25.2
+  - tk=8.6.8
+  - urllib3=1.23
+  - werkzeug=0.14.1
+  - wheel=0.31.1
+  - wrapt=1.10.11
+  - zlib=1.2.11
   - pip:
     - flask-pymongo==2.1.0
 prefix: /anaconda3/envs/ds
+
