--- a/phase2/requirements.txt
+++ b/phase2/requirements.txt
@@ -9,6 +9,7 @@ configparser==3.5.0
 cryptography==2.3.1
 enum34==1.1.6
 Flask==1.0.2
+Flask-PyMongo==2.1.0
 futures==3.2.0
 idna==2.7
 ipaddress==1.0.22
@@ -18,6 +19,7 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+psycopg2==2.7.5
 pycparser==2.18
 pylint==1.9.2
 pymongo==3.7.1
