--- a/phase3/docker-compose.yml
+++ b/phase3/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   my-postgres-db:
       build: db/
-      container_name: my-postgres-db
+      container_name: postgres-phase3
       environment:
         - POSTGRES_PASSWORD=root
       ports:
@@ -15,6 +15,7 @@ services:
     environment:
       - HOST=my-postgres-db
       - BROKERLIST=broker-1,broker-2,broker-3
+      - DB_HOST=postgres-phase3
     ports:
       - 5000:80
     
@@ -22,23 +23,23 @@ services:
     build: broker/
     container_name: broker-1
     environment:
-      - HOST=my-postgres-db
       - NEIGHBORS=broker-2,broker-3
       - BROKER_NAME=broker_1
+      - DB_HOST=postgres-phase3
   
   broker-2:
     build: broker/
     container_name: broker-2
     environment:
-      - HOST=my-postgres-db
       - NEIGHBORS=broker-1
       - BROKER_NAME=broker_2
+      - DB_HOST=postgres-phase3
   
   broker-3:
     build: broker/
     container_name: broker-3
     environment:
-      - HOST=my-postgres-db
       - NEIGHBORS=broker-1
       - BROKER_NAME=broker_3
+      - DB_HOST=postgres-phase3
   
